# libcddb

./: .cvsignore  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  acconfig.h  bootstrap  configure.ac  configure.in  libcddb.pc.in
doc/: .cvsignore  doxygen.conf
examples/: .cvsignore  Makefile.am  cd_access.c  do_album.c  do_display.c  do_query.c  do_read.c  do_search.c  do_sites.c  main.c  main.h
include/cddb/: .cvsignore  Makefile.am  cddb.h  cddb_cmd.h  cddb_cmd_ni.h  cddb_config.h.in  cddb_conn.h  cddb_conn_ni.h  cddb_disc.h  cddb_error.h  cddb_log.h  cddb_log_ni.h  cddb_net.h  cddb_ni.h  cddb_regex.h  cddb_site.h  cddb_track.h  debug.h
lib/: .cvsignore  Makefile.am  cddb.c  cddb_cmd.c  cddb_conn.c  cddb_disc.c  cddb_error.c  cddb_log.c  cddb_net.c  cddb_regex.c  cddb_site.c  cddb_track.c  cddb_util.c
misc/: libcddb-0.9.0.ebuild  libcddb.ebuild
src/: Makefile.am  main.c
tests/: .cvsignore  Makefile.am  base.c  base.h  check_cache.sh  check_discid.c  check_discid.sh  check_parse.sh  check_server.sh  settings.sh.in
tests/testcache/misc/: 12345678
tests/testdata/: 12345678.txt  56c2171b89496518.txt  920ef00b.txt  b2bba00e1890d659.txt
