dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libcddb, 0.1.4)

dnl Process custom command-line options
AC_ARG_ENABLE(debug,
              [  --enable-debug          enable debug mode [default=no]],
              enable_debug=yes, enable_debug=no)
if test x$enable_debug = xyes; then
  AC_DEFINE(DEBUG)
fi

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mkdir regcomp socket strdup strtol)

AC_OUTPUT([ \
    Makefile \
    include/Makefile \
    include/cddb/Makefile \
    lib/Makefile \
    src/Makefile \
])
